force-app/main/default/objects/BLN_ExternalFileLinks__c/BLN_ExternalFileLinks__c.object-meta.xml
<CustomObject>
    <description>FOUK-5770 This custom object will hold records to keep mapping between the ParentId eg WOLIId and AWS DocumentId</description>
    <label>External File Links</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ExtFileLink</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External File Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>