force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_Category__c.field-meta.xml
<CustomField>
    <fullName>BLN_Category__c</fullName>
    <description>Categorization of the File Uploaded</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Inspection</fullName>
            </value>
            <value>
                <fullName>Additional Inspection</fullName>
            </value>
            <value>
                <fullName>Post-Inspection</fullName>
            </value>
            <value>
                <fullName>Recalibration</fullName>
            </value>
            <value>
                <fullName>Failed Appointment Photos</fullName>
            </value>
            <value>
                <fullName>Corrective Action Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>