force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_DocumentId__c.field-meta.xml
<CustomField>
    <fullName>BLN_DocumentId__c</fullName>
    <description>FOUK-7055 This field is to hold the AWS Id returned by Mule-AWS</description>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>