force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_FileCreationDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_FileCreationDate__c</fullName>
    <description>FOUK-7055 This field is to hold DateTime of when document Id was created</description>
    <label>File Creation Date</label>
    <type>DateTime</type>
</CustomField>