force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_FileName__c.field-meta.xml
<CustomField>
    <fullName>BLN_FileName__c</fullName>
    <description>FOUK-7055 This field is to hold original file name</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>