force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_FileSize__c.field-meta.xml
<CustomField>
    <fullName>BLN_FileSize__c</fullName>
    <description>FOUK-7055 File size of the file in bytes</description>
    <label>File Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>