force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_FileType__c.field-meta.xml
<CustomField>
    <fullName>BLN_FileType__c</fullName>
    <description>FOUK-7055 This field is to hold File Type</description>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JPG</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>