force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_ParentId__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParentId__c</fullName>
    <description>FOUK-7055 This field is to hold Parent Id</description>
    <externalId>true</externalId>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>