force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_ParentObjectName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ParentObjectName__c</fullName>
    <description>FOUK-7055 This field is to hold name of Parent Object</description>
    <label>Parent Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>