force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_S3BucketLink__c.field-meta.xml
<CustomField>
    <fullName>BLN_S3BucketLink__c</fullName>
    <description>FOUK-7055 This field is to hold Amazon AWS S3 Bucket Link</description>
    <label>S3 Bucket Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>