force-app/main/default/objects/BLN_ExternalFileLinks__c/fields/BLN_ShowToCustomer__c.field-meta.xml
<CustomField>
    <fullName>BLN_ShowToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-7055 This field is to confirm if corresponding file entry needs to be displayed to customer on portal or not</description>
    <label>Show To Customer</label>
    <type>Checkbox</type>
</CustomField>